# rules_img_renovate_test

./: .bazelrc  BUILD.bazel  MODULE.bazel
