module(name = "minimal_rules_img_example")

bazel_dep(name = "rules_img", version = "0.2.3")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "alpine",
    digest = "sha256:4bcff63911fcb4448bd4fdacec207030997caf25e9bea4045fa6c8c44de311d1",
    registry = "index.docker.io",
    repository = "library/alpine",
    tag = "3",
)

pull(
    name = "ubuntu",
    digest = "sha256:66460d557b25769b102175144d538d88219c077c678a49af4afca6fbfc1b5252",
    registry = "index.docker.io",
    repository = "library/ubuntu",
    tag = "24.04",
)
